--- a/.github/workflows/check_releases.yml
+++ b/.github/workflows/check_releases.yml
@@ -45,18 +45,9 @@ jobs:
       run: |
         python - <<EOF
         def update_readme(latest_release, release_notes):
-            readme_template_file = "README_TEMPLATE.md"  # 替换为包含占位符的 README 模板文件路径
-            readme_output_file = "README.md"  # 替换为生成的 README 文件路径
-            
-            with open(readme_template_file, "r") as template_file:
-                template_content = template_file.read()
-            
-            # 更新版本号和更新内容
-            new_content = template_content.replace("{{latest_release}}", latest_release)
-            new_content = new_content.replace("{{release_notes}}", release_notes)
-            
-            with open(readme_output_file, "w") as output_file:
-                output_file.write(new_content)
+            readme_content = f"Latest Release: {latest_release}\n\nRelease Notes:\n{release_notes}"
+            with open("README.md", "w") as file:
+                file.write(readme_content)
         
         latest_release = "${{ steps.latest_release.outputs.stdout }}"
         release_notes = "${{ steps.latest_release.outputs.stderr }}"
